[gd_scene load_steps=7 format=3 uid="uid://c6b32lgryjfmh"]

[ext_resource type="Script" path="res://scripts/player_placeholder_armor_test.gd" id="1_u2rkr"]
[ext_resource type="Texture2D" uid="uid://dflwueble4oi" path="res://sprites/PlayerPlaceholder_V2_2.png" id="2_ths67"]

[sub_resource type="Animation" id="Animation_tj75a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/TorsoBone2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/TorsoBone2D/HeadBone2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D/TorsoBone2D/ArmLeftBone2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.523598]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton2D/TorsoBone2D/ArmLeftBone2D/HandLeftBone2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.523598]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton2D/TorsoBone2D/ArmRightBone2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton2D/TorsoBone2D/ArmRightBone2D/HandRightBone2D:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Skeleton2D/TorsoBone2D/LegLeftBone2D:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Skeleton2D/TorsoBone2D/LegLeftBone2D/FootLeftBone2D:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Skeleton2D/TorsoBone2D/LegRightBone2D:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Skeleton2D/TorsoBone2D/LegRightBone2D/FootRightBone2D:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_upnsr"]
resource_name = "run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/TorsoBone2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.261799]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/TorsoBone2D/HeadBone2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.8326]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D/TorsoBone2D/ArmLeftBone2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton2D/TorsoBone2D/ArmLeftBone2D/HandLeftBone2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.523598]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton2D/TorsoBone2D/ArmRightBone2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0472]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton2D/TorsoBone2D/ArmRightBone2D/HandRightBone2D:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Skeleton2D/TorsoBone2D/LegLeftBone2D:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.523599, -0.785398]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Skeleton2D/TorsoBone2D/LegLeftBone2D/FootLeftBone2D:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Skeleton2D/TorsoBone2D/LegRightBone2D:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.523599, 0.261799]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Skeleton2D/TorsoBone2D/LegRightBone2D/FootRightBone2D:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_jeqb3"]
resource_name = "walk"
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k3g0n"]
_data = {
"RESET": SubResource("Animation_tj75a"),
"run": SubResource("Animation_upnsr"),
"walk": SubResource("Animation_jeqb3")
}

[node name="Character" type="Node2D"]
position = Vector2(42, 109)
script = ExtResource("1_u2rkr")

[node name="Skeleton2D" type="Skeleton2D" parent="."]

[node name="TorsoBone2D" type="Bone2D" parent="Skeleton2D"]
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="TorsoSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D"]
position = Vector2(0, -23)
texture = ExtResource("2_ths67")
region_enabled = true
region_rect = Rect2(64, 0, 64, 64)

[node name="ArmorTorsoSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D"]
position = Vector2(0, -24)
scale = Vector2(1.05, 1.05)
region_enabled = true
region_rect = Rect2(64, 0, 64, 64)

[node name="HeadBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D"]
position = Vector2(-1, -57)
rotation = -1.5708
rest = Transform2D(-3.61999e-06, -1, 1, -3.61999e-06, -1, -57)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 0.0

[node name="HeadSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/HeadBone2D"]
position = Vector2(8.00001, -0.999969)
rotation = 1.57079
texture = ExtResource("2_ths67")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="FaceSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/HeadBone2D"]
position = Vector2(8.00001, -0.999973)
rotation = 1.57079
texture = ExtResource("2_ths67")
region_enabled = true
region_rect = Rect2(64, 64, 64, 64)

[node name="ArmorHeadSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/HeadBone2D"]
position = Vector2(8, -0.999973)
rotation = 1.57079
scale = Vector2(1.05, 1.05)
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="HairSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/HeadBone2D"]
position = Vector2(8.00001, -0.999973)
rotation = 1.57079
texture = ExtResource("2_ths67")
region_enabled = true
region_rect = Rect2(0, 64, 64, 64)

[node name="ArmLeftBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D"]
position = Vector2(17, -40)
rotation = -0.523598
rest = Transform2D(0.866026, -0.499999, 0.499999, 0.866026, 17, -40)

[node name="ArmLeftSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/ArmLeftBone2D"]
z_index = -1
position = Vector2(-6.00009, 18)
rotation = 0.261799
scale = Vector2(0.999981, 1.00005)
skew = -0.000163794
texture = ExtResource("2_ths67")
region_enabled = true
region_rect = Rect2(128, 0, 32, 44)

[node name="ArmorArmLeftSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/ArmLeftBone2D"]
z_index = -1
position = Vector2(-6.03589, 18.4545)
rotation = 0.261799
scale = Vector2(1.05, 1.05)
skew = -0.000163794
region_enabled = true
region_rect = Rect2(128, 0, 32, 44)

[node name="HandLeftBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D/ArmLeftBone2D"]
position = Vector2(-11, 38)
rotation = 0.523598
rest = Transform2D(0.866026, 0.499999, -0.499999, 0.866026, -11, 38)
auto_calculate_length_and_angle = false
length = 10.0
bone_angle = 90.0

[node name="HandLeftSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/ArmLeftBone2D/HandLeftBone2D"]
z_index = 1
position = Vector2(0, 9)
texture = ExtResource("2_ths67")
region_enabled = true
region_rect = Rect2(128, 44, 32, 19)

[node name="ArmorHandLeftSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/ArmLeftBone2D/HandLeftBone2D"]
z_index = 1
position = Vector2(5.52631, 9.59103)
scale = Vector2(1.05, 1.05)
flip_h = true
region_enabled = true
region_rect = Rect2(128, 44, 32, 19)

[node name="ArmRightBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D"]
position = Vector2(-16, -39)
rest = Transform2D(1, 0, 0, 1, -16, -39)

[node name="ArmRightSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/ArmRightBone2D"]
position = Vector2(-6.00009, 18)
rotation = 0.261799
scale = Vector2(0.999981, 1.00005)
skew = -0.000163794
texture = ExtResource("2_ths67")
region_enabled = true
region_rect = Rect2(128, 0, 32, 44)

[node name="ArmorArmRightSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/ArmRightBone2D"]
position = Vector2(-6, 18)
rotation = 0.261799
scale = Vector2(0.999981, 1.00005)
skew = -0.000163794
region_enabled = true
region_rect = Rect2(128, 0, 32, 44)

[node name="HandRightBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D/ArmRightBone2D"]
position = Vector2(-11, 38)
rest = Transform2D(1, 0, 0, 1, -11, 38)
auto_calculate_length_and_angle = false
length = 10.0
bone_angle = 90.0

[node name="HandRightSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/ArmRightBone2D/HandRightBone2D"]
z_index = 1
position = Vector2(0, 9)
texture = ExtResource("2_ths67")
region_enabled = true
region_rect = Rect2(128, 44, 32, 19)

[node name="ArmorHandRightSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/ArmRightBone2D/HandRightBone2D"]
z_index = 1
position = Vector2(0, 9)
scale = Vector2(1.05, 1.05)
region_enabled = true
region_rect = Rect2(128, 44, 32, 19)

[node name="LegLeftBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D"]
position = Vector2(13, 0)
rest = Transform2D(1, 0, 0, 1, 13, 0)

[node name="LegLeftSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/LegLeftBone2D"]
z_index = -1
position = Vector2(0, 15)
texture = ExtResource("2_ths67")
region_enabled = true
region_rect = Rect2(128, 64, 32, 44)

[node name="ArmorLegLeftSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/LegLeftBone2D"]
z_index = -1
position = Vector2(0, 15)
scale = Vector2(1.05, 1.05)
region_enabled = true
region_rect = Rect2(160, 0, 32, 44)

[node name="FootLeftBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D/LegLeftBone2D"]
position = Vector2(0, 35)
rest = Transform2D(1, 0, 0, 1, 0, 35)
auto_calculate_length_and_angle = false
length = 10.0
bone_angle = 90.0

[node name="FootLeftSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/LegLeftBone2D/FootLeftBone2D"]
position = Vector2(0, 12)
texture = ExtResource("2_ths67")
region_enabled = true
region_rect = Rect2(128, 108, 32, 20)

[node name="ArmorFootLeftSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/LegLeftBone2D/FootLeftBone2D"]
position = Vector2(0, 12)
scale = Vector2(1.05, 1.05)
region_enabled = true
region_rect = Rect2(160, 44, 32, 20)

[node name="LegRightBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D"]
position = Vector2(-13, 0)
rest = Transform2D(1, 0, 0, 1, -13, 0)

[node name="LegRightSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/LegRightBone2D"]
z_index = -1
position = Vector2(0, 15)
texture = ExtResource("2_ths67")
region_enabled = true
region_rect = Rect2(128, 64, 32, 44)

[node name="ArmorLegRightSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/LegRightBone2D"]
z_index = -1
position = Vector2(0, 15)
scale = Vector2(1.05, 1.05)
region_enabled = true
region_rect = Rect2(160, 0, 32, 44)

[node name="FootRightBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D/LegRightBone2D"]
position = Vector2(0, 35)
rest = Transform2D(1, 0, 0, 1, 0, 35)
auto_calculate_length_and_angle = false
length = 10.0
bone_angle = 90.0

[node name="FootRightSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/LegRightBone2D/FootRightBone2D"]
position = Vector2(0, 12)
texture = ExtResource("2_ths67")
region_enabled = true
region_rect = Rect2(128, 108, 32, 20)

[node name="ArmorFootRightSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/LegRightBone2D/FootRightBone2D"]
position = Vector2(-1, 12)
scale = Vector2(1.05, 1.05)
region_enabled = true
region_rect = Rect2(160, 44, 32, 20)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k3g0n")
}
